--- a/Love babbar/.vscode/settings.json
+++ b/Love babbar/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "files.associations": {
     "*.ejs": "html",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "initializer_list": "cpp"
   }
 }
